--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.0.0",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2"
@@ -36,10 +37,13 @@
     "css-loader": "^5.2.1",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
+    "sass": "^1.32.12",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4",
-    "webpack": "^5.32.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
