--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --collect-coverage",
-    "create": "webpack"
+    "create": "webpack",
+    "lint": "eslint --fix --ext .js,.jsx .",
+    "format": "prettier src/**/*.js --write. --config ./.prettierrc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@uphold/uphold-sdk-javascript": "^2.4.0",
     "bootstrap": "^5.0.0",
+    "dotenv": "^9.0.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
@@ -33,10 +37,22 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.22",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.1",
+    "dotenv-webpack": "^7.0.2",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
